Add test dataservice to dataContext

--- a/LucentDb.Web.UI/Views/Script/Index.cshtml
+++ b/LucentDb.Web.UI/Views/Script/Index.cshtml
@@ -130,10 +130,7 @@
 @section Scripts {
 
     <script src="~/app/Script/index.js"></script>
-    <script src="~/app/services/ConnectionDataService.js"></script>
-    <script src="~/app/services/AssertTypeDataService.js"></script>
-    <script src="~/app/services/ScriptDataService.js"></script>
-    <script src="~/app/services/LucentDbDataContext.js"></script>
+    <script src="~/bundles/LucentDbServices"></script>
     <script src="~/app/Script/Script.js"></script>
     <script src="~/Scripts/codemirror-3.01/codemirror.js"></script>
     <script src="~/Scripts/codemirror-3.01/mode/sql.js"></script>
