Change runHistory isPass to IsValid

--- a/LucentDb.Web.UI/Views/RunHistory/Details.cshtml
+++ b/LucentDb.Web.UI/Views/RunHistory/Details.cshtml
@@ -38,11 +38,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsPass)
+            @Html.DisplayNameFor(model => model.IsValid)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsPass)
+            @Html.DisplayFor(model => model.IsValid)
         </dd>
 
         <dt>
