--- a/LucentDb.Web.UI/Views/RunHistory/Edit.cshtml
+++ b/LucentDb.Web.UI/Views/RunHistory/Edit.cshtml
@@ -39,11 +39,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsPass, new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.IsValid, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsPass, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+                @Html.EditorFor(model => model.IsValid, new {htmlAttributes = new {@class = "form-control k-textbox"}})
 
-                @Html.ValidationMessageFor(model => model.IsPass, "", new {@class = "text-danger"})
+                @Html.ValidationMessageFor(model => model.IsValid, "", new {@class = "text-danger"})
             </div>
         </div>
 
