--- a/LucentDb.Web.UI/Views/RunHistory/Index.cshtml
+++ b/LucentDb.Web.UI/Views/RunHistory/Index.cshtml
@@ -72,7 +72,7 @@
             </td>
 
             <td>
-                {{item.isPass}}
+                {{item.isValid}}
             </td>
 
             <td>
