--- a/LucentDb.Web.UI/Views/Project/Index.cshtml
+++ b/LucentDb.Web.UI/Views/Project/Index.cshtml
@@ -11,67 +11,38 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <div ng-controller="projectIndexCtrl as vm">
-    <div style="float: right" class="btn-group" dropdown>
-        <button type="button" class="btn btn-primary">{{vm.pageSize}} Items per page</button>
-        <button type="button" class="btn dropdown-toggle">
-            <span class="caret"></span>
-            <span class="sr-only">Split button!</span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-            <li>
-                <a href="#" ng-click="vm.pageSize=10;vm.pageChanged()">10</a>
-            </li>
-            <li>
-                <a href="#" ng-click="vm.pageSize=20;vm.pageChanged()">20</a>
-            </li>
-            <li>
-                <a href="#" ng-click="vm.pageSize=50;vm.pageChanged()">50</a>
-            </li>
-        </ul>
+    
+    <div class="row" ng-repeat="item in vm.pageableResults.results">
+        <div class="col col-lg-12">
+            <div class="well">
+                <div class="row">
+
+                    <div class="col-md-10">
+                        <h3>
+                            {{item.name}}
+                        </h3>
+                        {{item.isActive}}
+
+                        <a href="" ng-click="vm.deleteProject(item.projectId)">
+                            <i class="fa fa-trash-o"></i>
+                        </a>
+                        <a href="/Project/Edit/{{item.projectId}}">Edit</a>
+                    </div>
+                    <div class="col-md-2">
+                        <div style="float: right">
+                            <i class="fa fa-play fa-2x" style="color: #008000"></i>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
     </div>
-    <table class="table">
-        <tr>
-
-            <th>
-                Project Id
-            </th>
-
-            <th>
-                Name
-            </th>
-
-            <th>
-                Is Active
-            </th>
-
-            <th></th>
-        </tr>
 
 
-        <tr ng-repeat="item in vm.pageableResults.results">
-
-            <td>
-                {{item.projectId}}
-            </td>
-
-            <td>
-                {{item.name}}
-            </td>
-
-            <td>
-                {{item.isActive}}
-            </td>
-
-            <td>
-                <a href="" ng-click="vm.deleteProject(item.projectId)">
-                    <i class="fa fa-trash-o"></i>
-                </a>
-                <a href="/Project/Edit/{{item.projectId}}">Edit</a>
-            </td>
-        </tr>
-
-
-    </table>
     <pagination total-items="vm.pageableResults.totalCount" items-per-page="vm.pageSize" ng-model="vm.currentPage" ng-change="vm.pageChanged()" max-size="10" class="pagination-sm" boundary-links="true"></pagination>
 </div>
 @section Scripts {
