--- a/LucentDb.Web.UI/Views/Project/Index.cshtml
+++ b/LucentDb.Web.UI/Views/Project/Index.cshtml
@@ -30,7 +30,11 @@
                     </div>
                     <div class="col-md-2">
                         <div style="float: right">
-                            <i class="fa fa-play fa-2x" style="color: #008000"></i>
+                           
+                            <span class="fa-stack fa-lg">
+  <i class="fa fa-square fa-stack-2x"></i>
+  <i class="fa fa-play fa-stack-1x fa-inverse"></i>
+</span>
                         </div>
                     </div>
                 </div>
