--- a/LucentDb.Web.UI/Views/Project/Index.cshtml
+++ b/LucentDb.Web.UI/Views/Project/Index.cshtml
@@ -15,9 +15,11 @@
     <div class="row" ng-repeat="item in vm.pageableResults.results">
         <div class="col col-lg-12">
             <div class="well">
-                <div class="row">
+                                 
 
-                    <div class="col-md-10">
+                <div class="row" >
+
+                    <div class="col-md-11">
                         <h3>
                             {{item.name}}
                         </h3>
@@ -28,14 +30,12 @@
                         </a>
                         <a href="/Project/Edit/{{item.projectId}}">Edit</a>
                     </div>
-                    <div class="col-md-2">
-                        <div style="float: right">
-                            <i class="fa fa-play fa-2x" style="color: #008000"></i>
-                        </div>
+                    <div class="col-md-1">
+                        
                     </div>
                 </div>
-
-
+                <i class="fa fa-pencil-square-o fa-2x" style="float: right; padding-bottom: 25px"></i>
+                <i class="fa fa-play fa-2x" style="color: #008000;float: right"></i>
 
 
             </div>
