--- a/LucentDb.Web.UI/Views/Test/Create.cshtml
+++ b/LucentDb.Web.UI/Views/Test/Create.cshtml
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IsActive, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsActive, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+                @Html.EditorFor(model => model.IsActive)
 
                 @Html.ValidationMessageFor(model => model.IsActive, "", new {@class = "text-danger"})
             </div>
