--- a/LucentDb.Web.UI/Views/Test/Edit.cshtml
+++ b/LucentDb.Web.UI/Views/Test/Edit.cshtml
@@ -23,7 +23,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProjectId, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ProjectId, (SelectList) ViewBag.Projects, new {@class = "form-control"})
+                @Html.DropDownListFor(model => model.ProjectId, (SelectList)ViewBag.Projects,  new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProjectId, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IsActive, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsActive, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+                @Html.EditorFor(model => model.IsActive)
 
                 @Html.ValidationMessageFor(model => model.IsActive, "", new {@class = "text-danger"})
             </div>
