--- a/LucentDb.Web.UI/Views/Test/Create.cshtml
+++ b/LucentDb.Web.UI/Views/Test/Create.cshtml
@@ -10,21 +10,21 @@
 @model LucentDb.Domain.Entities.Test
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Test</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
 
-       <div class="form-group">
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
+
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-       <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.GroupId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.GroupId, (SelectList)ViewBag.TestGroups, new { @class = "form-control" })
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-       <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control k-textbox" } })
@@ -62,25 +62,25 @@
             </div>
         </div>
 
-       <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.TestValue, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TestValue, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
+
                 @Html.ValidationMessageFor(model => model.TestValue, "", new { @class = "text-danger" })
             </div>
         </div>
 
-       <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
+                @Html.EditorFor(model => model.IsActive)
+
                 @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
             </div>
         </div>
-        
-       
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
