--- a/LucentDb.Web.UI/Views/TestType/Edit.cshtml
+++ b/LucentDb.Web.UI/Views/TestType/Edit.cshtml
@@ -10,17 +10,17 @@
 @model LucentDb.Domain.Entities.TestType
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>TestType</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
 
-       <div class="form-group">
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
             	@Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control k-textbox" } })
@@ -33,30 +33,30 @@
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
             	@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
+
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
-       <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.TestValidatorType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
             	@Html.EditorFor(model => model.TestValidatorType, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
+
                 @Html.ValidationMessageFor(model => model.TestValidatorType, "", new { @class = "text-danger" })
             </div>
         </div>
 
-       <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-            	@Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
+                @Html.EditorFor(model => model.IsActive)
+
                 @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
             </div>
         </div>
-        
-       
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
