Update Test Details and Edit Views

--- a/LucentDb.Web.UI/Views/ExpectedResult/Create.cshtml
+++ b/LucentDb.Web.UI/Views/ExpectedResult/Create.cshtml
@@ -10,71 +10,71 @@
 @model LucentDb.Domain.Entities.ExpectedResult
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ExpectedResult</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+        <hr/>
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Id, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Id, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.Id, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.TestId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.TestId, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.TestId, (SelectList)ViewBag.Tests, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TestId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.TestId, (SelectList) ViewBag.Tests, new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.TestId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.ExpectedResultTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ExpectedResultTypeId, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ExpectedResultTypeId, (SelectList)ViewBag.ExpectedResultTypes, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ExpectedResultTypeId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.ExpectedResultTypeId, (SelectList) ViewBag.ExpectedResultTypes, new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.ExpectedResultTypeId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.AssertTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.AssertTypeId, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.AssertTypeId, (SelectList)ViewBag.AssertTypes, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AssertTypeId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.AssertTypeId, (SelectList) ViewBag.AssertTypes, new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.AssertTypeId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.ExpectedValue, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ExpectedValue, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ExpectedValue, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.ExpectedValue, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ExpectedValue, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.ExpectedValue, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.ResultIndex, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ResultIndex, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ResultIndex, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.ResultIndex, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ResultIndex, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.ResultIndex, "", new {@class = "text-danger"})
             </div>
         </div>
-        
-       
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default"/>
             </div>
         </div>
     </div>
