--- a/LucentDb.Web.UI/Views/ExpectedResult/Index.cshtml
+++ b/LucentDb.Web.UI/Views/ExpectedResult/Index.cshtml
@@ -27,9 +27,15 @@
             <span class="sr-only">Split button!</span>
         </button>
         <ul class="dropdown-menu" role="menu">
-            <li><a href="#" ng-click="vm.pageSize=10;vm.pageChanged()">10</a></li>
-            <li><a href="#" ng-click="vm.pageSize=20;vm.pageChanged()">20</a></li>
-            <li><a href="#" ng-click="vm.pageSize=50;vm.pageChanged()">50</a></li>
+            <li>
+                <a href="#" ng-click="vm.pageSize=10;vm.pageChanged()">10</a>
+            </li>
+            <li>
+                <a href="#" ng-click="vm.pageSize=20;vm.pageChanged()">20</a>
+            </li>
+            <li>
+                <a href="#" ng-click="vm.pageSize=50;vm.pageChanged()">50</a>
+            </li>
         </ul>
     </div>
 
@@ -42,7 +48,9 @@
                     </div>
                     <div class="col-md-2">
                         <p>
-                            <a href="" ng-click="vm.deleteExpectedResult(item.id)"><i class="fa fa-trash-o"></i></a>
+                            <a href="" ng-click="vm.deleteExpectedResult(item.id)">
+                                <i class="fa fa-trash-o"></i>
+                            </a>
                             <a href="/ExpectedResult/Edit/{{item.id}}">Edit</a>
                         </p>
 
@@ -51,7 +59,6 @@
             </div>
         </div>
     </div>
-
 
 
     <pagination total-items="vm.pageableResults.totalCount" items-per-page="vm.pageSize" ng-model="vm.currentPage" ng-change="vm.pageChanged()" max-size="10" class="pagination-sm" boundary-links="true"></pagination>
