--- a/LucentDb.Web.UI/Views/RunHistory/Create.cshtml
+++ b/LucentDb.Web.UI/Views/RunHistory/Create.cshtml
@@ -10,73 +10,73 @@
 @model LucentDb.Domain.Entities.RunHistory
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>RunHistory</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+        <hr/>
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Id, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Id, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.Id, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.TestId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.TestId, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.TestId, (SelectList)ViewBag.Tests, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TestId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.TestId, (SelectList) ViewBag.Tests, new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.TestId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.RunDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.RunDateTime, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RunDateTime, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.RunDateTime, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.RunDateTime, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.RunDateTime, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.IsValid, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.IsValid, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsValid, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.IsValid, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IsValid, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.IsValid, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.RunLog, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.RunLog, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RunLog, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.RunLog, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.RunLog, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.RunLog, "", new {@class = "text-danger"})
             </div>
         </div>
 
-       <div class="form-group">
-            @Html.LabelFor(model => model.ResultString, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ResultString, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ResultString, new { htmlAttributes = new { @class = "form-control k-textbox" } })
-                 
-                @Html.ValidationMessageFor(model => model.ResultString, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ResultString, new {htmlAttributes = new {@class = "form-control k-textbox"}})
+
+                @Html.ValidationMessageFor(model => model.ResultString, "", new {@class = "text-danger"})
             </div>
         </div>
-        
-       
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default"/>
             </div>
         </div>
     </div>
