--- a/LucentDb.Web.UI/Views/RunHistory/Index.cshtml
+++ b/LucentDb.Web.UI/Views/RunHistory/Index.cshtml
@@ -27,70 +27,78 @@
             <span class="sr-only">Split button!</span>
         </button>
         <ul class="dropdown-menu" role="menu">
-            <li><a href="#" ng-click="vm.pageSize=10;vm.pageChanged()">10</a></li>
-            <li><a href="#" ng-click="vm.pageSize=20;vm.pageChanged()">20</a></li>
-            <li><a href="#" ng-click="vm.pageSize=50;vm.pageChanged()">50</a></li>
+            <li>
+                <a href="#" ng-click="vm.pageSize=10;vm.pageChanged()">10</a>
+            </li>
+            <li>
+                <a href="#" ng-click="vm.pageSize=20;vm.pageChanged()">20</a>
+            </li>
+            <li>
+                <a href="#" ng-click="vm.pageSize=50;vm.pageChanged()">50</a>
+            </li>
         </ul>
     </div>
     <table class="table">
         <tr>
 
-          <th>
+            <th>
                 Id
-          </th>     
+            </th>
 
-          <th>
+            <th>
                 Test Id
-          </th>     
+            </th>
 
-          <th>
+            <th>
                 Run Date Time
-          </th>     
+            </th>
 
-          <th>
+            <th>
                 Is Valid
-          </th>     
+            </th>
 
-          <th>
+            <th>
                 Run Log
-          </th>     
+            </th>
 
-          <th>
+            <th>
                 Result String
-          </th>     
+            </th>
 
-          <th></th>
+            <th></th>
         </tr>
 
 
         <tr ng-repeat="item in vm.pageableResults.results">
 
-          <td>
+            <td>
                 {{item.id}}
-          </td>     
+            </td>
 
-          <td>
+            <td>
                 {{item.testId}}
-          </td>     
+            </td>
 
-          <td>
+            <td>
                 {{item.runDateTime}}
-          </td>     
+            </td>
 
-          <td>
+            <td>
                 {{item.isValid}}
-          </td>     
+            </td>
 
-          <td>
+            <td>
                 {{item.runLog}}
-          </td>     
+            </td>
 
-          <td>
+            <td>
                 {{item.resultString}}
-          </td>     
+            </td>
 
-          <td>
-                <a href="" ng-click="vm.deleteRunHistory(item.id)"><i class="fa fa-trash-o"></i></a>
+            <td>
+                <a href="" ng-click="vm.deleteRunHistory(item.id)">
+                    <i class="fa fa-trash-o"></i>
+                </a>
                 <a href="/RunHistory/Edit/{{item.id}}">Edit</a>
             </td>
         </tr>
