--- a/LucentDb.Web.UI/Views/Shared/_Layout.cshtml
+++ b/LucentDb.Web.UI/Views/Shared/_Layout.cshtml
@@ -26,39 +26,45 @@
 </head>
 <body>
 
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new {area = ""}, null)</li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes" aria-expanded="false">Validation Api <span class="caret"></span></a>
-                        <ul class="dropdown-menu" aria-labelledby="Validation Api">
-                            <li><a href="/api/connections/1/projects/1/validate">Validate Project</a></li>
-                            <li><a href="/api/connections/1/testgroups/1/validate">Validate TestGroup</a></li>
-                            <li><a href="/api/connections/1/tests/1/validate">Validate Test</a></li>
-                        </ul>
-                    </li>
-                    
-                </ul>
-            </div>
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "Index", "Home", new {area = ""}, null)</li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes" aria-expanded="false">Validation Api <span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="Validation Api">
+                        <li>
+                            <a href="/api/connections/1/projects/1/validate">Validate Project</a>
+                        </li>
+                        <li>
+                            <a href="/api/connections/1/testgroups/1/validate">Validate TestGroup</a>
+                        </li>
+                        <li>
+                            <a href="/api/connections/1/tests/1/validate">Validate Test</a>
+                        </li>
+                    </ul>
+                </li>
+
+            </ul>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - LucentDb</p>
-        </footer>
-    </div>
+</div>
+<div class="container body-content">
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>&copy; @DateTime.Now.Year - LucentDb</p>
+    </footer>
+</div>
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
