--- a/LucentDb.Web.UI/Content/Site.css
+++ b/LucentDb.Web.UI/Content/Site.css
@@ -1,7 +1,27 @@
 ﻿body {
     padding-bottom: 20px;
     padding-top: 50px;
+    background-color: #fafafa;
 }
+
+
+
+
+.lui-page-panel {
+    margin-top: 25px;
+    padding: 20px;
+    margin-right: 0;
+    margin-left: 0;
+    border: 1px solid #a5a5a5;
+   background-color: #ffffff;
+    border-radius: 5px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    overflow: auto;
+}
+
+
+
 
 /* Set padding to keep content from hitting the edges */
 
