--- a/LucentDb.Web.UI/Views/Project/Edit.cshtml
+++ b/LucentDb.Web.UI/Views/Project/Edit.cshtml
@@ -1,55 +1,58 @@
 @model LucentDb.Domain.Entities.Project
 
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>Project</h4>
-        <hr/>
-        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+<div class="lui-page-panel">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProjectId, new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.ProjectId, new {@class = "form-control k-textbox", disabled = "disabled", @readonly = "readonly"})
-                @Html.ValidationMessageFor(model => model.ProjectId, "", new {@class = "text-danger"})
+
+        <div class="form-horizontal">
+            <h2>Project</h2>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.ProjectId, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.ProjectId, new { @class = "form-control k-textbox", disabled = "disabled", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control k-textbox" } })
+
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.IsActive, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.CheckBoxFor(model => model.IsActive, new { @class = "checkbox" })
+                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="button" class="btn btn-default" value="Cancel" onclick="location.href = '@Url.Action("Index")'" />
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
             </div>
         </div>
+    }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new {htmlAttributes = new {@class = "form-control k-textbox"}})
-
-                @Html.ValidationMessageFor(model => model.Name, "", new {@class = "text-danger"})
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsActive, new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.CheckBoxFor(model => model.IsActive, new {@class = "checkbox"})
-                @Html.ValidationMessageFor(model => model.IsActive, "", new {@class = "text-danger"})
-
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default"/>
-            </div>
-        </div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
